--- a/back/package.json
+++ b/back/package.json
@@ -1,6 +1,11 @@
 {
   "dependencies": {
     "arangojs": "^7.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.11"
   }
 }
