Working on login

--- a/back/package.json
+++ b/back/package.json
@@ -2,11 +2,13 @@
   "dependencies": {
     "arangojs": "^7.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.3",
     "@types/passport": "^1.0.5"
   }
 }
