--- a/back/package.json
+++ b/back/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
-    "@types/passport": "^1.0.5"
+    "@types/passport": "^1.0.5",
+    "@types/passport-local": "^1.0.33"
   }
 }
