--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,8 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "randevu-shared": "file:../shared"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
