--- a/back/package.json
+++ b/back/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "arangojs": "^7.2.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "passport": "^0.4.1",
@@ -8,6 +9,7 @@
     "randevu-shared": "file:../shared"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
     "@types/passport": "^1.0.5",
