Add RAN sharing

--- a/api.yaml
+++ b/api.yaml
@@ -314,6 +314,80 @@ paths:
           description: Deployment option not found
         "500":
           description: Internal failure
+  /ran-sharing:
+    get:
+      tags:
+        - RAN sharing
+      summary: Get a list of RAN sharing options
+      responses:
+        "200":
+          description: Ok
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
+        "403":
+          description: Unauthorized
+        "500":
+          description: Internal failure
+    post:
+      tags:
+        - RAN sharing
+      summary: Add a RAN sharing option
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - name
+              properties:
+                name:
+                  type: string
+      responses:
+        "200":
+          description: Ok
+        "400":
+          description: Invalid input
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  reason:
+                    type: string
+        "403":
+          description: Unauthorized
+        "500":
+          description: Internal failure
+  /ran-sharing/{name}:
+    post:
+      tags:
+        - RAN sharing
+      summary: Rename a RAN sharing option
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - nameNew
+              properties:
+                nameNew:
+                  type: string
+      responses:
+        "200":
+          description: Ok
+        "400":
+          description: Invalid input
+        "403":
+          description: Unauthorized
+        "404":
+          description: Deployment option not found
+        "500":
+          description: Internal failure
   /users/{username}:
     get:
       tags:
