--- a/api.yaml
+++ b/api.yaml
@@ -41,7 +41,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserInformation'
-        "400":
+        "401":
           description: Not authenticated
   /deployment-options:
     get:
@@ -155,6 +155,10 @@ paths:
       responses:
         "200":
           description: Ok
+          content:
+            "application/json":
+              schema:
+                $ref: '#/components/schemas/UserInformation'
         "401":
           description: Login failed
         "500":
