--- a/api.yaml
+++ b/api.yaml
@@ -6,6 +6,16 @@ servers:
   - url: http://localhost:3699
 components:
   schemas:
+    EnumInformation:
+      type: object
+      properties:
+        _id:
+          type: string
+        name:
+          type: string
+      required:
+        - _id
+        - name
     UserCredential:
       type: object
       properties:
@@ -56,7 +66,7 @@ paths:
               schema:
                 type: array
                 items:
-                  type: string
+                  $ref: '#/components/schemas/EnumInformation'
         "403":
           description: Unauthorized
         "500":
@@ -184,7 +194,7 @@ paths:
               schema:
                 type: array
                 items:
-                  type: string
+                  $ref: '#/components/schemas/EnumInformation'
         "403":
           description: Unauthorized
         "500":
@@ -317,7 +327,7 @@ paths:
               schema:
                 type: array
                 items:
-                  type: string
+                  $ref: '#/components/schemas/EnumInformation'
         "403":
           description: Unauthorized
         "500":
@@ -391,7 +401,7 @@ paths:
               schema:
                 type: array
                 items:
-                  type: string
+                  $ref: '#/components/schemas/EnumInformation'
         "403":
           description: Unauthorized
         "500":
