--- a/api.yaml
+++ b/api.yaml
@@ -270,11 +270,14 @@ paths:
                 items:
                   type: object
                   properties:
+                    _id:
+                      type: string
                     name:
                       type: string
                     owner:
                       type: string
                   required:
+                    - _id
                     - name
                     - owner
         "403":
