Add _id and detailed owner info to operator

--- a/api.yaml
+++ b/api.yaml
@@ -275,7 +275,15 @@ paths:
                     name:
                       type: string
                     owner:
-                      type: string
+                      type: object
+                      properties:
+                        _id:
+                          type: string
+                        username:
+                          type: string
+                      required:
+                        - _id
+                        - username
                   required:
                     - _id
                     - name
